<resources>
    <string name="app_name">Smart IV</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_new_entry">Add Drip Entry</string>
    <string name="check_for_assistance">Check For Assistance</string>
    <string name="sign_out">Sign Out</string>
    <string name="patient_name">Patient Name:</string>
    <string name="room_number">Room Number:</string>
    <string name="bed_number">Bed Number:</string>
    <string name="consulting_doctor">Consulting Doctor:</string>
    <string name="age">Age:</string>
    <string name="patients_blood_group">Blood Group:</string>
    <string name="suffering_from">Suffering From:</string>
    <string name="drip_used">Drip Used:</string>
    <string name="if_other">If Other:</string>
    <string name="gender">Gender:</string>
    <string name="emergency_contact_name_and_number">Emergency Number:</string>
    <string name="submit">Submit</string>
    <string name="iv_fluid">IV Fluid:</string>
    <string name="patient_id">Patient ID:</string>
    <string name="patient_personal_details">Patient Personal Details</string>
    <string name="phone_number">Phone Number:</string>
    <string name="patient_medical">Patient Medical Background</string>
    <string name="patient_medical_aD">Patient Medical Details:</string>
    <string name="syptoms">Syptoms:</string>
    <string name="delete_drip_entry">Delete Drip Entry</string>
    <string name="please_select_a_drip_from_the_spinner_and_then_press_submit">Please Select a Drip from the Spinner and Then Press Submit</string>
    <string name="enter_6721522_or_9420875_to_continue">Enter 6721522 or 9420875 to continue</string>
    <string name="enter_your_name_hosiptal_com_as_login_id_and_any_password_more_than_6_letters"><![CDATA[Enter \'<your_name>@hosiptal.com\' as Login Id and Any Password more than 6 letters]]></string>
    <string name="drip_status">Drip Status:</string>
    <string name="cric_level">At Critical Level</string>
    <string name="there_is_no_active_drip_at_this_moment">There is no Active Drip At this Moment!</string>
    <string name="tap_on_any_card_for_further_details">Tap on any card for further Details!</string>
    <string name="delete">Delete</string>
    <string name="search_of_any_patient">Search of Any Patient</string>
    <string name="health_scheme">Health Scheme:</string>
    <string name="insurance">Insurance:</string>
    <string name="previous_medical_history">Previous Medical History:</string>
    <string name="current_record">Current Record:</string>
    <string name="current_records">Current Records</string>
    <string name="handling_nurse">Handling Nurse:</string>
</resources>
