<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardBlue"
    android:backgroundTint="@color/cardBlue"
    android:elevation="10dp"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:id="@+id/rlDripSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/current_record"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/rlPatRoomNBed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHeading"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/room_number"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvRN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    tools:text="102" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/bed_number"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvBN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="90dp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    tools:text="10" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lldrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlPatRoomNBed">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/drip_used"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/dripSpinner"
                tools:listitem="@layout/item_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etDripSpec"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lldrip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/if_other"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>